5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1592_2425.log
== SUBMITION (2019-03-23 10:23:48) 
-- CODE:
dist = float(input())
consg = float(input())

consm = (dist * consg)/ 2

print(round(consm "km/l", 3))
-- EXECUTION TIME:
0.164738
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(consm "km/l", 3))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:23:55) 
-- CODE:
dist = float(input())
consg = float(input())

consm = (dist * consg)/ 2

print(round(consm "km/l", 3))
-- ERROR:
File "XXXX", line 6
    print(round(consm "km/l", 3))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:24:52) 
-- CODE:
dist = float(input())
consg = float(input())

consm = (dist * consg)/ 2

print(round(consm, 3) "km/l")
-- EXECUTION TIME:
0.17964
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(consm, 3) "km/l")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:25:08) 
-- CODE:
dist = float(input())
consg = float(input())

consm = (dist * consg)/ 2

print(round(consm, 3))
-- EXECUTION TIME:
0.116107
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
28.572
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
140198.8
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
1057894.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:25:27) 
-- CODE:
dist = float(input())
consg = float(input())

total = (dist * consg)/ 2

print(round(total, 3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:25:56) 
-- CODE:
dist = float(input())
consg = float(input())

total = (dist * consg)/2

print(round(total, 3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:26:26) 
-- CODE:
dist = float(input())
consg = float(input())

total = ((dist * consg)/2)

print(round(total, 3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:27:44) 
-- CODE:
d = float(input())
c = float(input())

total = ((d * c)/2)

print(round(total, 3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:28:37) 
-- CODE:
d = float(input())
c = float(input())

total = ((d * c)/2)

print(round(total, 3))
-- OUTPUT:
28.572
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:31:00) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3))
-- EXECUTION TIME:
0.123826
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:31:03) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:31:24) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3)"km/l")
-- EXECUTION TIME:
0.145881
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(total, 3)"km/l")
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:31:43) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print((round(total, 3))"km/l")
-- EXECUTION TIME:
0.135301
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print((round(total, 3))"km/l")
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:32:22) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3))("km/l")
-- EXECUTION TIME:
0.185929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 6, in <module>
    print(round(total, 3))("km/l")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:32:24) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3))("km/l")
-- EXECUTION TIME:
0.181297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 6, in <module>
    print(round(total, 3))("km/l")
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:32:27) 
-- CODE:
d = float(input())
c = float(input())

total = d/c

print(round(total, 3))("km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total, 3))("km/l")
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:33:45) 
-- CODE:
d = float(input()) km
c = float(input()) l

total = d/c

print(round(total, 3))
-- EXECUTION TIME:
0.135414
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 1
    d = float(input()) km
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:33:49) 
-- CODE:
d = float(input()) km
c = float(input()) l

total = d/c

print(round(total, 3))
-- ERROR:
File "XXXX", line 1
    d = float(input()) km
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:33:57) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3))
-- EXECUTION TIME:
0.190172
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:34:02) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:44:28) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3)) print("km/l")
-- EXECUTION TIME:
0.206278
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(total, 3)) print("km/l")
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:44:32) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3)) print("km/l")
-- ERROR:
File "XXXX", line 6
    print(round(total, 3)) print("km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:49:12) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3))/km/l/ )
-- EXECUTION TIME:
0.199125
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(total, 3))/km/l/ )
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:49:25) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3))km/l
-- EXECUTION TIME:
0.2657
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    print(round(total, 3))km/l
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:50:25) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total*"km/l", 3))
-- EXECUTION TIME:
0.161317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 6, in <module>
    print(round(total*"km/l", 3))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:50:49) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c km/l

print(round(total, 3))
-- EXECUTION TIME:
0.184345
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    total = d/c km/l
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:51:00) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c "km/l"

print(round(total, 3))
-- EXECUTION TIME:
0.120636
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    total = d/c "km/l"
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:51:02) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c "km/l"

print(round(total, 3))
-- ERROR:
File "XXXX", line 4
    total = d/c "km/l"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:51:17) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = (d/c "km/l")

print(round(total, 3))
-- EXECUTION TIME:
0.141537
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    total = (d/c "km/l")
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:51:28) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c

print(round(total, 3))
-- EXECUTION TIME:
0.127259
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:53:52) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c
u = "km/l"
print(round(total*u, 3))
-- EXECUTION TIME:
0.162131
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 6, in <module>
    print(round(total*u, 3))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:53:56) 
-- CODE:
d = float(input()) 
c = float(input()) 

total = d/c
u = "km/l"
print(round(total*u, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(total*u, 3))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:55:04) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total_u, 3))
-- EXECUTION TIME:
0.204884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 5, in <module>
    print(round(total_u, 3))
NameError: name 'total_u' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:55:08) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total_u, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total_u, 3))
NameError: name 'total_u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:55:31) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total_"u", 3))
-- EXECUTION TIME:
0.118352
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    print(round(total_"u", 3))
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:56:02) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print((round(total, 3))*u)
-- EXECUTION TIME:
0.168474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 5, in <module>
    print((round(total, 3))*u)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:56:15) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print((round(total, 3))"u")
-- EXECUTION TIME:
0.121263
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    print((round(total, 3))"u")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:56:27) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3))
-- EXECUTION TIME:
0.141745
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:56:29) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:06:52) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total + u, 3))
-- EXECUTION TIME:
0.131653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 5, in <module>
    print(round(total + u, 3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:07:20) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total + u, 3))
-- EXECUTION TIME:
0.194141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 5, in <module>
    print(round(total + u, 3))
NameError: name 'u' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:07:23) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total + u, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total + u, 3))
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:07:44) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total + u, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(total + u, 3))
NameError: name 'u' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:08:33) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3))
-- EXECUTION TIME:
0.151259
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:08:36) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:08:52) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3)" km/l ")
-- EXECUTION TIME:
0.149611
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    print(round(total, 3)" km/l ")
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:09:07) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3)" km/l ")
-- ERROR:
File "XXXX", line 5
    print(round(total, 3)" km/l ")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:09:24) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = "km/l"
print(round(total, 3))
-- EXECUTION TIME:
0.159305
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:37:33) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = km/l
print(round(total u, 3))
-- ERROR:
File "XXXX", line 5
    print(round(total u, 3))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:37:40) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = km/l
print(round(total, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    u = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:37:53) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = km/l
print(round(total, 3)u)
-- ERROR:
File "XXXX", line 5
    print(round(total, 3)u)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:38:09) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = km/l
print(round(total, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    u = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:31:00) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c
u = km/l
print(round(total, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    u = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:31:22) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:31:45) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3))_"km/l"
-- ERROR:
File "XXXX", line 5
    print(round(total, 3))_"km/l"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:31:57) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3)_"km/l")
-- ERROR:
File "XXXX", line 5
    print(round(total, 3)_"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:32:13) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:37) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3)"km/l")
-- ERROR:
File "XXXX", line 5
    print(round(total, 3)"km/l")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:45:09) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3) "km/l")
-- ERROR:
File "XXXX", line 5
    print(round(total, 3) "km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:48:25) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:53:00) 
-- CODE:
d = float(input()) 
c = float(input()) 
total = d/c

print(round(total, 3), "km/l")
-- EXECUTION TIME:
0.183175
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
